--- a/packages/bedroom.yaml
+++ b/packages/bedroom.yaml
@@ -30,7 +30,7 @@ climate:
     name: Main Bedroom
     heater: switch.bedroom_heater
     target_sensor: sensor.bedroom_temperature
-    initial_hvac_mode: "off"
+    initial_hvac_mode: 'off'
 
 fan:
   - platform: mqtt
@@ -48,7 +48,7 @@ fan:
     speed_value_template: "{{ value_json.FanSpeed }}"
     availability_topic: Bedroom_Fan/tele/LWT
     payload_off: "0"
-    payload_on: "ON"
+    payload_on: 'on'
     payload_low_speed: "1"
     payload_medium_speed: "2"
     payload_high_speed: "3"
