--- a/esphome/backroom.yaml
+++ b/esphome/backroom.yaml
@@ -1,8 +1,7 @@
 substitutions:
-  device: backroom
-  board: esp01_1m
+  name: backroom
   
-<<: !include common/common.yaml
+<<: !include common/esp8266.yaml
 
 switch:
   - platform: gpio
