--- a/esphome/bedroomesp.yaml
+++ b/esphome/bedroomesp.yaml
@@ -1,21 +1,8 @@
-esphome:
+substitutions:
   name: bedroomesp
-  platform: ESP32
-  board: esp32doit-devkit-v1
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  ap:
-    ssid: bedroomesp
+<<: !include common/esp32.yaml
 
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
 light:
   - platform: fastled_clockless
     chipset: WS2812B
