--- a/esphome/common/common.yaml
+++ b/esphome/common/common.yaml
@@ -1,24 +1,21 @@
-esphome:
-  name: ${device}
-  platform: ESP8266
-  board: ${board}
-
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "${device} Fallback Hotspot"
+    ssid: "${name} Fallback Hotspot"
     password: !secret wifi_password
 
 captive_portal:
 
+web_server:
+  port: 80
 
 # Enable logging
 logger:
 
-# Enable Home Assistant API
+# Enable ESPHome API
 #api:
 
 mqtt:
