--- a/esphome/entry.yaml
+++ b/esphome/entry.yaml
@@ -1,8 +1,7 @@
 substitutions:
-  device: entry
-  board: esp01_1m
+  name: entry
   
-<<: !include common/common.yaml
+<<: !include common/esp8266.yaml
 
 switch:
   - platform: gpio
