--- a/esphome/hallway.yaml
+++ b/esphome/hallway.yaml
@@ -1,8 +1,7 @@
 substitutions:
-  device: hallway
-  board: esp01_1m
+  name: hallway
   
-<<: !include common/common.yaml
+<<: !include common/esp8266.yaml
 
 switch:
   - platform: gpio
