--- a/esphome/laundry.yaml
+++ b/esphome/laundry.yaml
@@ -1,8 +1,7 @@
 substitutions:
-  device: laundry
-  board: esp01_1m
+  name: laundry
 
-<<: !include common/common.yaml
+<<: !include common/esp8266.yaml
 
 switch:
   - platform: gpio
