--- a/esphome/laundrytoilet.yaml
+++ b/esphome/laundrytoilet.yaml
@@ -1,8 +1,7 @@
 substitutions:
-  device: laundrytoilet
-  board: esp01_1m
+  name: laundrytoilet
 
-<<: !include common/common.yaml
+<<: !include common/esp8266.yaml
 
 switch:
   - platform: gpio
