--- a/esphome/lightstrip.yaml
+++ b/esphome/lightstrip.yaml
@@ -1,19 +1,10 @@
-esphome:
+substitutions:
   name: lightstrip
-  platform: ESP8266
-  board: d1_mini
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
+<<: !include common/d1mini.yaml
 
 # Enable Home Assistant API
 api:
-
-ota:
 
 light:
   - platform: fastled_clockless
