--- a/esphome/lightstrip2.yaml
+++ b/esphome/lightstrip2.yaml
@@ -1,32 +1,7 @@
-esphome:
+substitutions:
   name: lightstrip2
-  platform: ESP8266
-  board: d1_mini
-  on_boot:
-    priority: 50
-    then:
-     - light.turn_on:
-         id: strip1
-         brightness: 100%
-         red: 100%
-         green: 50%
-         blue: 1%
-     - delay: 1s
-     - light.turn_on:
-         id: strip1
-         effect: "Random Twinkle"
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
+  
+<<: !include common/d1mini.yaml
 
 light:
   - platform: fastled_clockless
