--- a/esphome/sensorlight.yaml
+++ b/esphome/sensorlight.yaml
@@ -1,15 +1,7 @@
-esphome:
+substitutions:
   name: sensorlight
-  platform: ESP8266
-  board: esp01_1m
   
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-logger:
-
-ota:
+<<: !include common/esp8266.yaml
 
 binary_sensor:
   - platform: gpio
