--- a/esphome/washing.yaml
+++ b/esphome/washing.yaml
@@ -1,19 +1,7 @@
-esphome:
+substitutions:
   name: washing
-  platform: ESP8266
-  board: esp01_1m
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
+<<: !include common/esp8266.yaml
 
 binary_sensor:
   - platform: gpio
