Remember friendly names

--- a/influxdb.yaml
+++ b/influxdb.yaml
@@ -5,6 +5,9 @@ database: homeassistant
 #password: !secret influx_username
 max_retries: 3
 default_measurement: value
+tags_attributes:
+  - friendly_name
+  - hidden
 include:
   domains:
     - sensor
