--- a/esphome/common/common.yaml
+++ b/esphome/common/common.yaml
@@ -11,6 +11,8 @@ captive_portal:
 
 web_server:
   port: 80
+  css_url: http://dock/int/esphome/webserver-v1.min.css
+  js_url: http://dock/int/esphome/webserver-v1.min.js
 
 # Enable logging
 logger:
