--- a/esphome/entry.yaml
+++ b/esphome/entry.yaml
@@ -25,11 +25,7 @@ binary_sensor:
       inverted: True
     name: "Entry Switch1"
     on_press:
-      then:
-        - switch.turn_on: relay2
-        - mqtt.publish:
-            topic: Entry/cmnd/Backlog
-            payload: "CT 370; Dimmer 100; POWER toggle"
+      switch.toggle: relay2
   - platform: gpio
     pin:
       number: GPIO5
