--- a/packages/bedroom.yaml
+++ b/packages/bedroom.yaml
@@ -16,7 +16,7 @@ switch:
           service: light.turn_on
           data:
               entity_id: light.bedroom_lights
-              brightness_pct: 100
+              brightness: 255
               color_temp: 370
               transition: 1
         turn_off:
