--- a/packages/craftroom.yaml
+++ b/packages/craftroom.yaml
@@ -15,7 +15,7 @@ switch:
           service: light.turn_on
           data:
               entity_id: light.craftroom_lights
-              brightness_pct: 100
+              brightness: 255
               color_temp: 370
               transition: 1
         turn_off:
