--- a/packages/hall.yaml
+++ b/packages/hall.yaml
@@ -14,7 +14,7 @@ switch:
           service: light.turn_on
           data:
               entity_id: light.hall_lights
-              brightness_pct: 100
+              brightness: 255
               color_name: white
               transition: 1
         turn_off:
