--- a/packages/office.yaml
+++ b/packages/office.yaml
@@ -15,7 +15,7 @@ switch:
           - service: light.turn_on
             data:
               entity_id: light.office_lights
-              brightness_pct: 100
+              brightness: 255
               transition: 1
           - service: light.turn_on
             data:
