--- a/packages/xander.yaml
+++ b/packages/xander.yaml
@@ -15,7 +15,7 @@ switch:
           service: light.turn_on
           data:
               entity_id: light.xander_lights
-              brightness_pct: 100
+              brightness: 255
               transition: 1
         turn_off:
           service: light.turn_off
@@ -92,5 +92,5 @@ automation:
       data_template:
         transition: 1
         color_name: blue
-        brightness_pct: 100
+        brightness: 255
         effect: 2
