--- a/scene.yaml
+++ b/scene.yaml
@@ -1,18 +1,28 @@
 - name: All off
   entities:
-    light.backroom_lights: false
-    light.livingroom_lights: false
-    light.office_lights: false
-    light.bedroom_lights: false
-    light.craftroom_lights: false
-    light.kitchen_lighta: false
-    light.xander_lights: false
-    light.lucas_lights: false
-    light.hall_lights: false
-    light.entry_lights: false
-    light.carport_lights: false
-    light.backyard_lights: false
+    light.backroom_lights: 
+      state: "off"
+    light.office_lights: 
+      state: "off"
+    light.bedroom_lights: 
+      state: "off"
+    light.craftroom_lights: 
+      state: "off"
+    light.kitchen_lighta: 
+      state: "off"
+    light.xander_lights: 
+      state: "off"
+    light.lucas_lights: 
+      state: "off"
+    light.hall_lights: 
+      state: "off"
+    light.entry_lights: 
+      state: "off"
+    light.carport_lights: 
+      state: "off"
+    light.backyard_lights: 
+      state: "off"
     light.tv_backlight:
-      state: true
-      brightness_pct: 100
+      state: "on"
+      brightness: 255
       effect: Random Twinkle
