--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,3 +1,6 @@
 - platform: onkyo
   host: 192.168.86.30
   name: receiver
+- platform: emby
+  host: 192.168.86.3
+  api_key: !secret jellyfin_apikey
