--- a/packages/livingroom.yaml
+++ b/packages/livingroom.yaml
@@ -24,12 +24,10 @@ climate:
   - platform: sensibo
     api_key: !secret sensibo_api_key
 
-# camera:
-#   - platform: generic
-#     name: livingroom
-#     stream_source: rtsp://192.168.86.56:554/
-#     #still_image_url: http://192.168.86.2:6080/zm/cgi-bin/zms?mode=single&monitor=4
-
+camera:
+  - platform: ffmpeg
+    name: livingroom
+    input: rtsp://livingcam.lan:554/
 
 automation:
   - alias: Livingroom - Switch 1
