--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,8 @@ homeassistant:
   external_url: https://ha.adebenham.com
   media_dirs:
     motion: /media/zoneminder
+    television: /media/television
+    movies: /media/movies
 
 frontend:
   themes: !include_dir_merge_named themes/
