--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -385,6 +385,8 @@ views:
     - entity: switch.powerboard2_outlet_4
     - entity: script.1588132444815
     - entity: switch.bedroom_plug_bottom
+    - entity: switch.sonoff_pow_r2_relay
+    - entity: switch.jimbob
     show_header_toggle: false
     title: Switches
     type: entities
@@ -397,17 +399,17 @@ views:
   - user: 0b1cbeace9894723ae6b36fb5a846990
 - badges: []
   cards:
-  - entity: camera.carport
+  - camera_image: camera.carport_reo
+    entity: camera.carport_reo
     show_name: false
     show_state: false
-    title: Carport
     type: picture-entity
   - aspect_ratio: 50%
     entity: camera.livingroom
     show_name: false
     show_state: false
     type: picture-entity
-  - entity: camera.entry
+  - entity: camera.entry_reo
     show_name: false
     show_state: false
     title: Entry
@@ -478,6 +480,10 @@ views:
     type: custom:mini-media-player
   - entity: media_player.bedroom_tv
     type: custom:mini-media-player
+  - entity: media_player.googlehome0972
+    type: media-control
+  - entity: media_player.pioneer_vsx_832_ed2c08
+    type: media-control
   icon: mdi:movie
   title: Media
   visible:
@@ -504,8 +510,8 @@ views:
 - badges: []
   cards:
   - entities:
-    - entity: sensor.carport_camera_motion
-    - entity: sensor.entry_camera_motion
+    - entity: binary_sensor.motion_carport
+    - entity: binary_sensor.motion_entry
     title: Motion
     type: entities
   - entities:
@@ -567,7 +573,44 @@ views:
     - entity: sensor.netatmo_indoor_noise
       name: Noise level
     type: history-graph
-  icon: mdi:settings
+  icon: mdi:cog
   title: ''
   visible:
   - user: 78554c5a47cd465b8f4689851629b80f
+- badges: []
+  cards:
+  - camera_image: camera.backroom
+    camera_view: live
+    entity: camera.backroom
+    show_name: false
+    show_state: false
+    tap_action:
+      action: none
+    type: picture-entity
+  - camera_image: camera.backyard
+    camera_view: live
+    entity: camera.backyard
+    show_name: false
+    show_state: false
+    tap_action:
+      action: none
+    type: picture-entity
+  - camera_image: camera.livingroom
+    camera_view: live
+    entity: camera.livingroom
+    image: https://demo.home-assistant.io/stub_config/bedroom.png
+    show_name: false
+    show_state: false
+    tap_action:
+      action: none
+    type: picture-entity
+  icon: mdi:video
+  theme: ''
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+- badges: []
+  cards:
+  - config: /local/floorplan/Deane.yaml
+    type: custom:floorplan-card
+  icon: ''
+  title: Deane
