--- a/packages/matrix.yaml
+++ b/packages/matrix.yaml
@@ -1,40 +1,40 @@
-matrix:
-  homeserver: https://matrix.adebenham.com/
-  username: !secret matrix_user
-  password: !secret matrix_password
-  rooms:
-    - "#hass:adebenham.com"
-  commands:
-    - word: testword
-      name: testword
-      rooms:
-        - "#someothertest:matrix.org"
-    - expression: "My name is (?P<name>.*)"
-      name: introduction
-
-notify:
-  - name: matrix_notify
-    platform: matrix
-    default_room: "#hass:adebenham.com"
-
-automation:
-  - alias: 'React to !testword'
-    trigger:
-      platform: event
-      event_type: matrix_command
-      event_data:
-        command: testword
-    action:
-      service: notify.matrix_notify
-      data:
-        message: 'It looks like you wrote !testword'
-  - alias: 'React to an introduction'
-    trigger:
-      platform: event
-      event_type: matrix_command
-      event_data:
-        command: introduction
-    action:
-      service: notify.matrix_notify
-      data_template:
-        message: "Hello {{trigger.event.data.args['name']}}"
+#matrix:
+#  homeserver: https://matrix.adebenham.com/
+#  username: !secret matrix_user
+#  password: !secret matrix_password
+#  rooms:
+#    - "#hass:adebenham.com"
+#  commands:
+#    - word: testword
+#      name: testword
+#      rooms:
+#        - "#someothertest:matrix.org"
+#    - expression: "My name is (?P<name>.*)"
+#      name: introduction
+#
+#notify:
+#  - name: matrix_notify
+#    platform: matrix
+#    default_room: "#hass:adebenham.com"
+#
+#automation:
+#  - alias: 'React to !testword'
+#    trigger:
+#      platform: event
+#      event_type: matrix_command
+#      event_data:
+#        command: testword
+#    action:
+#      service: notify.matrix_notify
+#      data:
+#        message: 'It looks like you wrote !testword'
+#  - alias: 'React to an introduction'
+#    trigger:
+#      platform: event
+#      event_type: matrix_command
+#      event_data:
+#        command: introduction
+#    action:
+#      service: notify.matrix_notify
+#      data_template:
+#        message: "Hello {{trigger.event.data.args['name']}}"
